--- a/sertifications.html
+++ b/sertifications.html
@@ -38,9 +38,11 @@
             </nav>
             <div class="phone">
                 <div class="phone__icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
-                        <path d="M3.3953 18.7573L3.49118 18.5045L3.33217 18.2859C2.04885 16.5213 1.2998 14.3558 1.2998 12C1.2998 6.08813 6.08795 1.29999 11.9998 1.29999C17.9117 1.29999 22.6998 6.08813 22.6998 12C22.6998 17.9118 17.9117 22.7 11.9998 22.7C9.83133 22.7 7.7997 22.0577 6.11715 20.936L5.92393 20.8071L5.70085 20.8717L2.21025 21.8815L3.3953 18.7573ZM18.3132 17.0057L18.3315 16.9878L18.3479 16.9681C18.9188 16.283 18.9326 15.2416 18.2999 14.5693L18.2947 14.5638L18.2894 14.5584L16.5254 12.7944C15.6549 11.924 14.1306 12.2608 13.7623 13.4478L13.7622 13.4478L13.7609 13.4523C13.6751 13.7383 13.3087 13.9468 12.9891 13.8669L12.9865 13.8663C12.4776 13.7419 11.8121 13.3249 11.2223 12.7484C10.6317 12.1711 10.2019 11.5166 10.0786 10.99L10.0726 10.964L10.0637 10.9388C9.98191 10.705 10.1425 10.3374 10.5063 10.2063C11.6849 9.83231 12.0172 8.31432 11.1494 7.44643L9.38536 5.68243L9.38 5.67708L9.37449 5.67189C8.71202 5.04839 7.64721 5.03347 6.99825 5.68243L5.79425 6.88643L5.79416 6.88634L5.78613 6.89475C5.37538 7.32506 5.21494 7.90644 5.21951 8.5225C5.22406 9.13713 5.39131 9.82542 5.68098 10.5395C6.26098 11.9691 7.36806 13.5912 8.87359 15.0969C10.3777 16.6151 11.9996 17.7442 13.4342 18.3321C14.1508 18.6258 14.8445 18.7942 15.4668 18.7917C16.0923 18.7891 16.6776 18.6118 17.1111 18.1798L18.3132 17.0057Z" stroke="#F5C233"/>
-                    </svg>
+                    <a href="tel:+74952569999">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
+                            <path d="M3.3953 18.7573L3.49118 18.5045L3.33217 18.2859C2.04885 16.5213 1.2998 14.3558 1.2998 12C1.2998 6.08813 6.08795 1.29999 11.9998 1.29999C17.9117 1.29999 22.6998 6.08813 22.6998 12C22.6998 17.9118 17.9117 22.7 11.9998 22.7C9.83133 22.7 7.7997 22.0577 6.11715 20.936L5.92393 20.8071L5.70085 20.8717L2.21025 21.8815L3.3953 18.7573ZM18.3132 17.0057L18.3315 16.9878L18.3479 16.9681C18.9188 16.283 18.9326 15.2416 18.2999 14.5693L18.2947 14.5638L18.2894 14.5584L16.5254 12.7944C15.6549 11.924 14.1306 12.2608 13.7623 13.4478L13.7622 13.4478L13.7609 13.4523C13.6751 13.7383 13.3087 13.9468 12.9891 13.8669L12.9865 13.8663C12.4776 13.7419 11.8121 13.3249 11.2223 12.7484C10.6317 12.1711 10.2019 11.5166 10.0786 10.99L10.0726 10.964L10.0637 10.9388C9.98191 10.705 10.1425 10.3374 10.5063 10.2063C11.6849 9.83231 12.0172 8.31432 11.1494 7.44643L9.38536 5.68243L9.38 5.67708L9.37449 5.67189C8.71202 5.04839 7.64721 5.03347 6.99825 5.68243L5.79425 6.88643L5.79416 6.88634L5.78613 6.89475C5.37538 7.32506 5.21494 7.90644 5.21951 8.5225C5.22406 9.13713 5.39131 9.82542 5.68098 10.5395C6.26098 11.9691 7.36806 13.5912 8.87359 15.0969C10.3777 16.6151 11.9996 17.7442 13.4342 18.3321C14.1508 18.6258 14.8445 18.7942 15.4668 18.7917C16.0923 18.7891 16.6776 18.6118 17.1111 18.1798L18.3132 17.0057Z" stroke="#F5C233"/>
+                        </svg>
+                    </a>
                 </div>
                 <a href="#" class="color-yellow">+7 495 256 99 99</a>
                 <a href="#" class="phone__link">Заказать звонок</a>
@@ -49,7 +51,7 @@
     </header>
     <div class="services-menu services-menu__hide">
         <div class="container">
-            <h2 class="services-menu__title title-1">Меню</h2>
+            <h2 class="services-menu__title title-1 color-yellow">Меню</h2>
             <a href="./services.html" class="services-menu__title title-2 color-yellow">Услуги</a>
             <div class="services-menu__close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
@@ -187,32 +189,32 @@
                 </div>
             </div>
         </div>
-        <div class="questions__entry">
-            <div class="container">
-                <h2 class="questions__entry__title color-black">Хотите задать свой вопрос?</h2>
-                <div class="questions__entry__form wpcf7-form">
-                    <form action="#">
-                        <span class="wpcf7-form-control-wrap">
-                            <input type="text" placeholder="Ваше имя" class="color-grey">
-                        </span>
-                        <span class="wpcf7-form-control-wrap">
-                            <input type="tel" placeholder="Номер телефона*" class="color-grey">
-                        </span>
-                        <div class="questions__entry__form__policy color-black">
-                            Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
-                        </div>
-                        <a href="#" class="wpcf7-form-control wpcf7-submit btn">
-                            Задать вопрос
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="12" viewBox="0 0 22 12">
-                                <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75V5.25ZM21.5303 6.53033C21.8232 6.23744 21.8232 5.76256 21.5303 5.46967L16.7574 0.696699C16.4645 0.403806 15.9896 0.403806 15.6967 0.696699C15.4038 0.989593 15.4038 1.46447 15.6967 1.75736L19.9393 6L15.6967 10.2426C15.4038 10.5355 15.4038 11.0104 15.6967 11.3033C15.9896 11.5962 16.4645 11.5962 16.7574 11.3033L21.5303 6.53033ZM1 6.75H21V5.25H1V6.75Z"/>
-                            </svg>
-                        </a>
-                    </form>
-                </div>
+    </section>
+    <div class="questions__entry">
+        <div class="container">
+            <h2 class="questions__entry__title color-black">Хотите задать свой вопрос?</h2>
+            <div class="questions__entry__form wpcf7-form">
+                <form action="#">
+                    <span class="wpcf7-form-control-wrap">
+                        <input type="text" placeholder="Ваше имя" class="color-grey">
+                    </span>
+                    <span class="wpcf7-form-control-wrap">
+                        <input type="tel" placeholder="Номер телефона*" class="color-grey">
+                    </span>
+                    <div class="questions__entry__form__policy color-black">
+                        Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
+                    </div>
+                    <a href="#" class="wpcf7-form-control wpcf7-submit btn">
+                        Задать вопрос
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="12" viewBox="0 0 22 12">
+                            <path d="M1 5.25C0.585786 5.25 0.25 5.58579 0.25 6C0.25 6.41421 0.585786 6.75 1 6.75V5.25ZM21.5303 6.53033C21.8232 6.23744 21.8232 5.76256 21.5303 5.46967L16.7574 0.696699C16.4645 0.403806 15.9896 0.403806 15.6967 0.696699C15.4038 0.989593 15.4038 1.46447 15.6967 1.75736L19.9393 6L15.6967 10.2426C15.4038 10.5355 15.4038 11.0104 15.6967 11.3033C15.9896 11.5962 16.4645 11.5962 16.7574 11.3033L21.5303 6.53033ZM1 6.75H21V5.25H1V6.75Z"/>
+                        </svg>
+                    </a>
+                </form>
             </div>
         </div>
-    </section>
-    <div class="modal">
+    </div>
+    <div class="modal visible-hide">
         <div class="modal__wrap">
             <div class="modal__wrap__window">
                 <h2 class="modal__wrap__window__title">Заказать звонок</h2>
