--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,30 @@
                     </div>
                     <div class="portfolio-works__slider__item__title">Дезинфекция районной больницы </div>
                 </div>
+                <div class="portfolio-works__slider__item">
+                    <div class="portfolio-works__slider__item__img">
+                        <img src="./assets/img/video/video-poster-2.jpg" alt="video-img">
+                    </div>
+                    <div class="portfolio-works__slider__item__play-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55" fill="none">
+                            <path d="M49.5996 48.5H5.40043C4.10182 48.5 2.85573 47.9808 1.93647 47.0554C1.01709 46.13 0.5 44.8741 0.5 43.5639V12.4361C0.5 11.1259 1.01709 9.87005 1.93647 8.94459C2.85573 8.01925 4.10182 7.5 5.40043 7.5H49.5996C50.8982 7.5 52.1443 8.01925 53.0635 8.94459C53.9829 9.87005 54.5 11.1259 54.5 12.4361V43.5639C54.5 44.8741 53.9829 46.13 53.0635 47.0554C52.1443 47.9808 50.8982 48.5 49.5996 48.5Z" fill="#212224" fill-opacity="0.35" stroke="white"/>
+                            <path d="M20 37.6429V17.358C20 17.1185 20.0638 16.8832 20.1848 16.6761C20.3058 16.469 20.4798 16.2973 20.689 16.1786C20.8983 16.0599 21.1355 15.9983 21.3765 16C21.6174 16.0018 21.8537 16.0669 22.0611 16.1887L39.3294 26.3312C39.5337 26.4513 39.703 26.6223 39.8206 26.8272C39.9382 27.0322 40 27.2641 40 27.5C40 27.7359 39.9382 27.9678 39.8206 28.1728C39.703 28.3777 39.5337 28.5487 39.3294 28.6688L22.0611 38.8113C21.8537 38.9331 21.6176 38.9981 21.3767 39C21.1358 39.0018 20.8987 38.9403 20.6895 38.8216C20.4802 38.703 20.3062 38.5315 20.1851 38.3245C20.0641 38.1175 20.0002 37.8824 20 37.6429Z" fill="white"/>
+                        </svg>
+                    </div>
+                    <div class="portfolio-works__slider__item__title">Дезинфекция районной больницы </div>
+                </div>
+                <div class="portfolio-works__slider__item">
+                    <div class="portfolio-works__slider__item__img">
+                        <img src="./assets/img/video/video-poster-2.jpg" alt="video-img">
+                    </div>
+                    <div class="portfolio-works__slider__item__play-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55" fill="none">
+                            <path d="M49.5996 48.5H5.40043C4.10182 48.5 2.85573 47.9808 1.93647 47.0554C1.01709 46.13 0.5 44.8741 0.5 43.5639V12.4361C0.5 11.1259 1.01709 9.87005 1.93647 8.94459C2.85573 8.01925 4.10182 7.5 5.40043 7.5H49.5996C50.8982 7.5 52.1443 8.01925 53.0635 8.94459C53.9829 9.87005 54.5 11.1259 54.5 12.4361V43.5639C54.5 44.8741 53.9829 46.13 53.0635 47.0554C52.1443 47.9808 50.8982 48.5 49.5996 48.5Z" fill="#212224" fill-opacity="0.35" stroke="white"/>
+                            <path d="M20 37.6429V17.358C20 17.1185 20.0638 16.8832 20.1848 16.6761C20.3058 16.469 20.4798 16.2973 20.689 16.1786C20.8983 16.0599 21.1355 15.9983 21.3765 16C21.6174 16.0018 21.8537 16.0669 22.0611 16.1887L39.3294 26.3312C39.5337 26.4513 39.703 26.6223 39.8206 26.8272C39.9382 27.0322 40 27.2641 40 27.5C40 27.7359 39.9382 27.9678 39.8206 28.1728C39.703 28.3777 39.5337 28.5487 39.3294 28.6688L22.0611 38.8113C21.8537 38.9331 21.6176 38.9981 21.3767 39C21.1358 39.0018 20.8987 38.9403 20.6895 38.8216C20.4802 38.703 20.3062 38.5315 20.1851 38.3245C20.0641 38.1175 20.0002 37.8824 20 37.6429Z" fill="white"/>
+                        </svg>
+                    </div>
+                    <div class="portfolio-works__slider__item__title">Дезинфекция районной больницы </div>
+                </div>               
                 <div class="portfolio-works__slider__prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
                         <rect x="-0.5" y="0.5" width="39" height="59" rx="1.5" transform="matrix(-1 0 0 1 39 0)" stroke="#C3C3C3"/>
@@ -304,13 +328,13 @@
                 <div class="footer-wrap__menu">
                     <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
-                        <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Препараты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Специалисты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Сертификаты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Контакты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Блог</a></li>
+                        <li><a href="./about-us.html" class="footer-wrap__menu__list__item">О нас</a></li>
+                        <li><a href="./portfolio.html" class="footer-wrap__menu__list__item">Наши работы</a></li>
+                        <li><a href="./products.html" class="footer-wrap__menu__list__item">Препараты</a></li>
+                        <li><a href="./personal.html" class="footer-wrap__menu__list__item">Специалисты</a></li>
+                        <li><a href="./sertifications.html" class="footer-wrap__menu__list__item">Сертификаты</a></li>
+                        <li><a href="./contacts.html" class="footer-wrap__menu__list__item">Контакты</a></li>
+                        <li><a href="./blog.html" class="footer-wrap__menu__list__item">Блог</a></li>
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
