--- a/post.html
+++ b/post.html
@@ -293,6 +293,32 @@
                             <span class="post-slider__wrap__slider__item__link__date color-grey">22.06.2023</span>
                         </div>
                     </div>
+                    <div class="post-slider__wrap__slider__item">
+                        <div class="post-slider__wrap__slider__item__img">
+                            <img src="./assets/img/posts/image-3.png" alt="post-img">
+                        </div>
+                        <span class="post-slider__wrap__slider__item__title color-black">Уничтожение насекомых на предприятиях общепита</span>
+                        <div class="post-slider__wrap__slider__item__text color-grey">
+                            Озон является не только веществом, которое предохраняет нашу планету от разрушительного воздействия ультрафиолета, но и отличным дезинфектором. Озонация...
+                        </div>
+                        <div class="post-slider__wrap__slider__item__link">
+                            <a href="#" class="color-yellow">Читать статью</a>
+                            <span class="post-slider__wrap__slider__item__link__date color-grey">06.07.2023</span>
+                        </div>
+                    </div>
+                    <div class="post-slider__wrap__slider__item">
+                        <div class="post-slider__wrap__slider__item__img">
+                            <img src="./assets/img/posts/image-3.png" alt="post-img">
+                        </div>
+                        <span class="post-slider__wrap__slider__item__title color-black">Уничтожение насекомых на предприятиях общепита</span>
+                        <div class="post-slider__wrap__slider__item__text color-grey">
+                            Озон является не только веществом, которое предохраняет нашу планету от разрушительного воздействия ультрафиолета, но и отличным дезинфектором. Озонация...
+                        </div>
+                        <div class="post-slider__wrap__slider__item__link">
+                            <a href="#" class="color-yellow">Читать статью</a>
+                            <span class="post-slider__wrap__slider__item__link__date color-grey">06.07.2023</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="post-slider__wrap__prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
@@ -420,13 +446,13 @@
                 <div class="footer-wrap__menu">
                     <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
-                        <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Препараты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Специалисты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Сертификаты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Контакты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Блог</a></li>
+                        <li><a href="./about-us.html" class="footer-wrap__menu__list__item">О нас</a></li>
+                        <li><a href="./portfolio.html" class="footer-wrap__menu__list__item">Наши работы</a></li>
+                        <li><a href="./products.html" class="footer-wrap__menu__list__item">Препараты</a></li>
+                        <li><a href="./personal.html" class="footer-wrap__menu__list__item">Специалисты</a></li>
+                        <li><a href="./sertifications.html" class="footer-wrap__menu__list__item">Сертификаты</a></li>
+                        <li><a href="./contacts.html" class="footer-wrap__menu__list__item">Контакты</a></li>
+                        <li><a href="./blog.html" class="footer-wrap__menu__list__item">Блог</a></li>
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
