--- a/about-us.html
+++ b/about-us.html
@@ -387,13 +387,13 @@
                 <div class="footer-wrap__menu">
                     <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
-                        <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Препараты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Специалисты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Сертификаты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Контакты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Блог</a></li>
+                        <li><a href="./about-us.html" class="footer-wrap__menu__list__item">О нас</a></li>
+                        <li><a href="./portfolio.html" class="footer-wrap__menu__list__item">Наши работы</a></li>
+                        <li><a href="./products.html" class="footer-wrap__menu__list__item">Препараты</a></li>
+                        <li><a href="./personal.html" class="footer-wrap__menu__list__item">Специалисты</a></li>
+                        <li><a href="./sertifications.html" class="footer-wrap__menu__list__item">Сертификаты</a></li>
+                        <li><a href="./contacts.html" class="footer-wrap__menu__list__item">Контакты</a></li>
+                        <li><a href="./blog.html" class="footer-wrap__menu__list__item">Блог</a></li>
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
