--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                     </svg>
                 </div>
                 <div class="comments__slider__wrap">
-                    <div class="comments__slider__wrap__item swiper-slide">
+                    <div class="comments__slider__wrap__item">
                         <div class="comments__slider__wrap__item__header">
                             <div class="comments__slider__wrap__item__header__img">
                                 <img src="./assets/icon/comment/avatar-1.png" alt="user-icon">
@@ -831,7 +831,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="comments__slider__wrap__item swiper-slide">
+                    <div class="comments__slider__wrap__item">
                         <div class="comments__slider__wrap__item__header">
                             <div class="comments__slider__wrap__item__header__img">
                                 <img src="./assets/icon/comment/avatar-2.png" alt="user-icon">
@@ -854,7 +854,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="comments__slider__wrap__item swiper-slide">
+                    <div class="comments__slider__wrap__item">
                         <div class="comments__slider__wrap__item__header">
                             <div class="comments__slider__wrap__item__header__img">
                                 <img src="./assets/icon/comment/avatar-3.png" alt="user-icon">
@@ -989,9 +989,9 @@
             </div>
             <div class="products__slider">
                 <div class="products__slider__prev arrow-next-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="#FFF">
-                        <rect x="-0.75" y="0.75" width="38.5" height="58.5" rx="1.25" transform="matrix(-1 0 0 1 38.5 0)" stroke="#F5C233" stroke-width="1.5"/>
-                        <path d="M29 29.25C29.4142 29.25 29.75 29.5858 29.75 30C29.75 30.4142 29.4142 30.75 29 30.75V29.25ZM10.4697 30.5303C10.1768 30.2374 10.1768 29.7626 10.4697 29.4697L15.2426 24.6967C15.5355 24.4038 16.0104 24.4038 16.3033 24.6967C16.5962 24.9896 16.5962 25.4645 16.3033 25.7574L12.0607 30L16.3033 34.2426C16.5962 34.5355 16.5962 35.0104 16.3033 35.3033C16.0104 35.5962 15.5355 35.5962 15.2426 35.3033L10.4697 30.5303ZM29 30.75H11V29.25H29V30.75Z" fill="#F5C233"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
+                        <rect x="-0.75" y="0.75" width="38.5" height="58.5" rx="1.25" transform="matrix(-1 0 0 1 39 0)" stroke="#C3C3C3"/>
+                        <path d="M29 29.25C29.4142 29.25 29.75 29.5858 29.75 30C29.75 30.4142 29.4142 30.75 29 30.75V29.25ZM10.4697 30.5303C10.1768 30.2374 10.1768 29.7626 10.4697 29.4697L15.2426 24.6967C15.5355 24.4038 16.0104 24.4038 16.3033 24.6967C16.5962 24.9896 16.5962 25.4645 16.3033 25.7574L12.0607 30L16.3033 34.2426C16.5962 34.5355 16.5962 35.0104 16.3033 35.3033C16.0104 35.5962 15.5355 35.5962 15.2426 35.3033L10.4697 30.5303ZM29 30.75H11V29.25H29V30.75Z" fill="#C4C4C4"/>
                     </svg>
                 </div>
                 <div class="products__slider__wrap">
@@ -1436,13 +1436,13 @@
                 <div class="footer-wrap__menu">
                     <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
-                        <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Препараты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Специалисты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Сертификаты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Контакты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Блог</a></li>
+                        <li><a href="./about-us.html" class="footer-wrap__menu__list__item">О нас</a></li>
+                        <li><a href="./portfolio.html" class="footer-wrap__menu__list__item">Наши работы</a></li>
+                        <li><a href="./products.html" class="footer-wrap__menu__list__item">Препараты</a></li>
+                        <li><a href="./personal.html" class="footer-wrap__menu__list__item">Специалисты</a></li>
+                        <li><a href="./sertifications.html" class="footer-wrap__menu__list__item">Сертификаты</a></li>
+                        <li><a href="./contacts.html" class="footer-wrap__menu__list__item">Контакты</a></li>
+                        <li><a href="./blog.html" class="footer-wrap__menu__list__item">Блог</a></li>
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
