--- a/services.html
+++ b/services.html
@@ -721,7 +721,7 @@
                         <path d="M29 29.25C29.4142 29.25 29.75 29.5858 29.75 30C29.75 30.4142 29.4142 30.75 29 30.75V29.25ZM10.4697 30.5303C10.1768 30.2374 10.1768 29.7626 10.4697 29.4697L15.2426 24.6967C15.5355 24.4038 16.0104 24.4038 16.3033 24.6967C16.5962 24.9896 16.5962 25.4645 16.3033 25.7574L12.0607 30L16.3033 34.2426C16.5962 34.5355 16.5962 35.0104 16.3033 35.3033C16.0104 35.5962 15.5355 35.5962 15.2426 35.3033L10.4697 30.5303ZM29 30.75H11V29.25H29V30.75Z" fill="#C4C4C4"/>
                     </svg>
                 </div>
-                <div class="video-reports__foto-slider__next arrow-next-end">
+                <div class="video-reports__foto-slider__next">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="60" viewBox="0 0 40 60" fill="none">
                         <rect x="0.75" y="0.75" width="38.5" height="58.5" rx="1.25" stroke="#F5C233" stroke-width="1.5"/>
                         <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#F5C233"/>
@@ -1110,7 +1110,7 @@
                             <span class="wpcf7-form-control-wrap">
                                 <input type="tel" placeholder="Номер телефона*" class="color-grey">
                             </span>
-                            <div class="footer-wrap__main__form__policy color-balck">
+                            <div class="footer-wrap__main__form__policy">
                                 Отправляя заявку, Вы даете согласие на обработку персональных данных, установленными <a href="#">политикой конфиденциальности</a>
                             </div>
                             <a href="#" class="wpcf7-form-control wpcf7-submit btn">
@@ -1137,13 +1137,13 @@
                 <div class="footer-wrap__menu">
                     <span class="footer-wrap__menu__title">Меню</span>
                     <ul class="footer-wrap__menu__list">
-                        <li><a href="#" class="footer-wrap__menu__list__item">О нас</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Наши работы</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Препараты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Специалисты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Сертификаты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Контакты</a></li>
-                        <li><a href="#" class="footer-wrap__menu__list__item">Блог</a></li>
+                        <li><a href="./about-us.html" class="footer-wrap__menu__list__item">О нас</a></li>
+                        <li><a href="./portfolio.html" class="footer-wrap__menu__list__item">Наши работы</a></li>
+                        <li><a href="./products.html" class="footer-wrap__menu__list__item">Препараты</a></li>
+                        <li><a href="./personal.html" class="footer-wrap__menu__list__item">Специалисты</a></li>
+                        <li><a href="./sertifications.html" class="footer-wrap__menu__list__item">Сертификаты</a></li>
+                        <li><a href="./contacts.html" class="footer-wrap__menu__list__item">Контакты</a></li>
+                        <li><a href="./blog.html" class="footer-wrap__menu__list__item">Блог</a></li>
                     </ul>
                 </div>
                 <div class="footer-wrap__contacts">
