--- a/sertifications.html
+++ b/sertifications.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
     <link rel="shortcut icon" href="./assets/icon/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>Корпорация Дезинфекции</title>
 </head>
@@ -204,90 +211,81 @@
     </header>
     <div class="services-menu services-menu__hide">
         <div class="container">
-            <h2 class="services-menu__title title-1 color-yellow">Меню</h2>
-            <a href="./services.html" class="services-menu__title title-2 color-yellow">Услуги</a>
             <div class="services-menu__close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60">
                     <path clip-rule="evenodd" d="M15.1569 14.0989C14.864 13.806 14.3891 13.806 14.0962 14.0989C13.8033 14.3918 13.8033 14.8666 14.0962 15.1595L28.3506 29.4139L14.0954 43.6692C13.8025 43.9621 13.8025 44.437 14.0954 44.7299C14.3882 45.0228 14.8631 45.0228 15.156 44.7299L29.4113 30.4746L43.6673 44.7306C43.9602 45.0235 44.4351 45.0235 44.728 44.7306C45.0209 44.4378 45.0209 43.9629 44.728 43.67L30.4719 29.4139L44.7271 15.1588C45.02 14.8659 45.02 14.391 44.7271 14.0981C44.4342 13.8052 43.9594 13.8052 43.6665 14.0981L29.4113 28.3533L15.1569 14.0989Z"/>
                 </svg>
             </div>
-            <ul class="services-menu__menu">
-                <li><a href="./about-us.html" class="services-menu__menu__item">О нас</a></li>
-                <li><a href="./portfolio.html" class="services-menu__menu__item">Наши работы</a></li>
-                <li><a href="./products.html" class="services-menu__menu__item">Препараты</a></li>
-                <li><a href="./personal.html" class="services-menu__menu__item">Специалисты</a></li>
-                <li><a href="./sertifications.html" class="services-menu__menu__item">Сертификаты</a></li>
-                <li><a href="./contacts.html" class="services-menu__menu__item">Контакты</a></li>
-                <li><a href="./blog.html" class="services-menu__menu__item">Блог</a></li> 
-            </ul>
             <div class="services-menu__wrap">
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Услуги для квартир</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Уничтожение клопов</li>
-                        <li>Уничтожение тараканов</li>
-                        <li>Дезинфекция квартиры</li>
-                        <li>Дератизация и дезинсекция квартиры</li>
-                        <li>Экспертиза СЭС в квартире</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Услуги для коттеджей</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Обработка от клещей</li>
-                        <li>Уничтожение комаров</li>
-                        <li>Уничтожение мышей</li>
-                        <li>Уничтожение кротов</li>
-                        <li>Уничтожение ос и шершней</li>
-                        <li>Обработка от мух</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Услуги для организаций</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Дератизация и дезинфекция офиса</li>
-                        <li>Дератизация и дезинфекция склада</li>
-                        <li>Дезинсекция в мини гостиницах</li>
-                        <li>Дезинсекция на предприятиях</li>
-                        <li>Сервисы СЭС для общепита</li>
-                        <li>Услуги для животноводческих помещений</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Уничтожение насекомых</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Дезинсекция блох</li>
-                        <li>Дезинсекция муравьев</li>
-                        <li>Дезинсекция подвалов</li>
-                        <li>Дезинсекция одежды</li>
-                        <li>Обработка помещений от насекомых</li>
-                        <li>Дезинсекция объектов</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Уничтожение грызунов</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Дератизация территории</li>
-                        <li>Дератизация предприятий и организаций</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Дезинфекция</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Дезинфекция после смерти</li>
-                        <li>Дезинфекция автотранспорта</li>
-                        <li>Дезинфекция от коронавируса</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Дезодорация</h2>
-                    <ul class="services-menu__wrap__item__list">
-                        <li>Устранение неприятных запахов</li>
-                    </ul>
-                </div>
-                <div class="services-menu__wrap__item">
-                    <h2 class="services-menu__wrap__item__title">Документы СЭС</h2>
-                </div>
+                <ul class="services-menu__wrap__main-menu">
+                    <li><a href="./about-us.html" class="services-menu__wrap__main-menu__item">О нас</a></li>
+                    <li><a href="./portfolio.html" class="services-menu__wrap__main-menu__item">Наши работы</a></li>
+                    <li><a href="./products.html" class="services-menu__wrap__main-menu__item">Препараты</a></li>
+                    <li><a href="./personal.html" class="services-menu__wrap__main-menu__item">Специалисты</a></li>
+                    <li><a href="./sertifications.html" class="services-menu__wrap__main-menu__item">Сертификаты</a></li>
+                    <li><a href="./contacts.html" class="services-menu__wrap__main-menu__item">Контакты</a></li>
+                    <li><a href="./blog.html" class="services-menu__wrap__main-menu__item">Блог</a></li>
+                </ul>
+                <ul class="services-menu__wrap__second-menu">
+                    <li class="services-menu__wrap__second-menu__item">Услуги для квартир
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#"> Уничтожение клопов</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#"> Уничтожение тараканов</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#"> Дезинфекция квартиры</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#"> Дератизация и дезинсекция квартиры</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#"> Экспертиза СЭС в квартире</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Услуги для коттеджей
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Обработка от клещей</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Уничтожение комаров</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Уничтожение мышей</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Уничтожение кротов</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Уничтожение ос и шершней</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Обработка от мух</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Услуги для организаций
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дератизация и дезинфекция офиса</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дератизация и дезинфекция склада</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция в мини гостиницах</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция на предприятиях</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Сервисы СЭС для общепита</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Услуги для животноводческих помещений</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Уничтожение насекомых
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция блох</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция муравьев</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция подвалов</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция одежды</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Обработка помещений от насекомых</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинсекция объектов</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Уничтожение грызунов
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дератизация территории</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дератизация предприятий и организаций</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Дезинфекция
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинфекция после смерти</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинфекция автотранспорта</a></li>
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Дезинфекция от коронавируса</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Дезодорация
+                        <ul class="services-menu__wrap__second-menu__item__sub-menu">
+                            <li class="services-menu__wrap__second-menu__item__sub-menu__link"><a href="#">Устранение неприятных запахов</a></li>
+                        </ul>
+                    </li>
+                    <li class="services-menu__wrap__second-menu__item">Документы СЭС</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -302,24 +300,36 @@
                 Все препараты которые используем мы для работы имеют необходимые сертификаты соответствия, Наша организация проходит все необходимые проверки и ведет документацию 
             </div>
     </section>
-    <section class="sertificate-list">
+    <section class="sertificate-list sect-pad">
         <div class="container">
             <div class="sertificte__slider">
-                <div class="sertificate-list__slider__wrap owl-carousel">
-                    <div class="sertificate-list__slider__wrap__item">
-                        <img src="./assets/img/sertification/img-1.svg" alt="sertificate-img">
-                    </div>
-                    <div class="sertificate-list__slider__wrap__item">
-                        <img src="./assets/img/sertification/img-2.svg" alt="sertificate-img">
-                    </div>
-                    <div class="sertificate-list__slider__wrap__item">
-                        <img src="./assets/img/sertification/img-3.svg" alt="sertificate-img">
-                    </div>
-                    <div class="sertificate-list__slider__wrap__item">
-                        <img src="./assets/img/sertification/img-1.svg" alt="sertificate-img">
-                    </div>
-                    <div class="sertificate-list__slider__wrap__item">
-                        <img src="./assets/img/sertification/img-1.svg" alt="sertificate-img">
+                <div class="sertificate-list__slider__wrap swiper">
+                    <div class="swiper-wrapper">
+                        <div class="sertificate-list__slider__wrap__item swiper-slide">
+                            <a href="./assets/img/sertification/img-1.svg" data-fancybox="gallery-sertif">
+                                <img src="./assets/img/sertification/img-1.svg" alt="sertificate-img">
+                            </a>
+                        </div>
+                        <div class="sertificate-list__slider__wrap__item swiper-slide">
+                            <a href="./assets/img/sertification/img-2.svg" data-fancybox="gallery-sertif">
+                                <img src="./assets/img/sertification/img-2.svg" alt="sertificate-img">
+                            </a>
+                        </div>
+                        <div class="sertificate-list__slider__wrap__item swiper-slide">
+                            <a href="./assets/img/sertification/img-3.svg" data-fancybox="gallery-sertif">
+                                <img src="./assets/img/sertification/img-3.svg" alt="sertificate-img">
+                            </a>
+                        </div>
+                        <div class="sertificate-list__slider__wrap__item swiper-slide">
+                            <a href="./assets/img/sertification/img-1.svg" data-fancybox="gallery-sertif">
+                                <img src="./assets/img/sertification/img-1.svg" alt="sertificate-img">
+                            </a>
+                        </div>
+                        <div class="sertificate-list__slider__wrap__item swiper-slide">
+                            <a href="./assets/img/sertification/img-2.svg" data-fancybox="gallery-sertif">
+                                <img src="./assets/img/sertification/img-2.svg" alt="sertificate-img">
+                            </a>                        
+                        </div>
                     </div>
                 </div>
                 <div class="sertificate-list__slider__prev">
@@ -334,9 +344,7 @@
                         <path d="M11 29.25C10.5858 29.25 10.25 29.5858 10.25 30C10.25 30.4142 10.5858 30.75 11 30.75V29.25ZM29.5303 30.5303C29.8232 30.2374 29.8232 29.7626 29.5303 29.4697L24.7574 24.6967C24.4645 24.4038 23.9896 24.4038 23.6967 24.6967C23.4038 24.9896 23.4038 25.4645 23.6967 25.7574L27.9393 30L23.6967 34.2426C23.4038 34.5355 23.4038 35.0104 23.6967 35.3033C23.9896 35.5962 24.4645 35.5962 24.7574 35.3033L29.5303 30.5303ZM11 30.75H29V29.25H11V30.75Z" fill="#F5C233"/>
                     </svg>
                 </div>
-                <div class="sertificate-list__slider__dots">
-
-                </div>
+                <div class="sertificate-list__slider__dots"></div>
             </div>
         </div>
     </section>
@@ -673,12 +681,8 @@
             <span class="footer-privacy__year">2023г. Все права защищены</span>
         </div>
     </footer>
-    <script
-        src="https://code.jquery.com/jquery-3.7.0.min.js"
-        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
-        crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./assets/js/second-script.js"></script>
     <script src="./assets/js/sertif-page.js"></script>
 </body>
